--- a/home/i3/config
+++ b/home/i3/config
@@ -5,7 +5,7 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-set $term = st
+set $term = sakura
 # focus follows mouse cursor w/o clicks? y/n
 focus_follows_mouse no
 
@@ -24,7 +24,7 @@ set $workspace1 "1:Games"
 set $workspace2 "2:Terminals"
 set $workspace3 "3:Game Management"
 set $workspace4 "4:Files"
-set $workspace5 "5:Media Players/Editors"
+set $workspace5 "5:Misc"
 set $workspace6 "6:Browsers"
 set $workspace7 "7:Discord"
 set $workspace8 "8:OBS"
@@ -47,11 +47,14 @@ assign [class="Gimp-2.8"] $workspace5
 assign [class="steam.exe"] $workspace3
 assign [class="Firefox"] $workspace6
 assign [class="Mainwindow.py"] $workspace3
-
+assign [class="Sakura"] $workspace2
+assign [class="Falkon"] $workspace6
 
 # Game Window Assignments
 # Source
 assign [class="hl2_linux"] $workspace1
+# Celeste
+assign [class="Celeste.bin.x86_64"] $workspace1
 # ToME
 assign [class="t-engine64"] $workspace1
 # Black Ice
@@ -93,6 +96,8 @@ assign [class="Wine"] $workspace1
 assign [class="SlimeRancher.x86_64"] $workspace1
 # Path of Exile
 assign [class="pathofexile.exe"] $workspace1
+# DCSS
+assign [class="crawl-tiles"] $workspace1
 
 # Workspace Monitor Assignments
 # Monitor 1
@@ -144,7 +149,7 @@ bindsym Shift+F12 exec maim --hidecursor -s  ~/Pictures/$(date +%F-%T).png
 bindsym F12 exec maim -i $(xdotool getactivewindow) ~/Pictures/$(date +%F-%T).png
 
 # start a terminal
-bindsym $mod+Return exec st
+bindsym $mod+Return exec sakura
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -299,17 +304,15 @@ bindsym $mod+Shift+x exec i3lock --ignore-empty-password -c 000000
 bindsym XF86AudioRaiseVolume exec mocp --volume "+1"
 bindsym XF86AudioLowerVolume exec mocp --volume "-1"
 # Media player controls
-bindsym $mod+shift+p exec mocp -G
-bindsym $mod+shift+equal exec mocp --next
-bindsym $mod+shift+minus exec mocp --previous
-bindsym $mod+shift+Escape exec mocp -x
+bindsym XF86AudioPlay exec mocp -G
+bindsym XF86AudioNext exec mocp --next
+bindsym XF86AudioPrev exec mocp --previous
 
 # Startup Programs
 exec firefox
 exec steam-runtime
 exec discord-canary
 exec-always source ~/.bashrc
-exec --no-startup-id xsetroot -solid "#000e10"
+exec --no-startup-id feh --bg-scale /home/sunderkeenin/configs/backgrounds/desktop_background.png
 exec-always monitorfix
-exec easymusic
-exec st -e htop
+exec ~/scripts/easymusic.sh
