--- a/home/moc/config
+++ b/home/moc/config
@@ -25,8 +25,8 @@ ShowFormat = yes
 ShowTime = yes
 
 # Noting terminal emulator here
-XTerms = st
-XTerms += st-256color
+XTerms = sakura
+XTerms += sakura
 
 # Noting themes here
 Theme = sunder_theme
