--- a/home/i3/config
+++ b/home/i3/config
@@ -291,6 +291,12 @@ bindsym $mod+r mode "resize"
 # border sizes
 hide_edge_borders both
 new_window pixel 0
+for_window [class="^.*"] border pixel 0
+
+# gaps
+gaps inner 3
+gaps outer 0
+smart_gaps on
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -304,7 +310,7 @@ bar {
         background         #000e10
         statusline         #33AA00
         separator          #33AA00
-
+        
         focused_workspace  #000e10 #001f33 #33AA00
         active_workspace   #000e10 #000e10 #33AA00
         inactive_workspace #000e10 #000e10 #33AA00
