fixing i3blocks opacity/color

--- a/home/i3/config
+++ b/home/i3/config
@@ -5,7 +5,7 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-set $term sakura
+set $term urxvt
 # focus follows mouse cursor w/o clicks? y/n
 focus_follows_mouse no
 
@@ -54,6 +54,7 @@ assign [class="Midori"] $workspace6
 assign [class="Eolie"] $workspace6
 assign [class="Min"] $workspace6
 assign [class="Electron"] $workspace6
+assign [class="URxvt"] $workspace2
 
 # Game Window Assignments
 # Source
@@ -166,7 +167,7 @@ bindsym Shift+F12 exec maim --hidecursor -s  ~/Pictures/$(date +%F-%T).png
 bindsym F12 exec maim -i $(xdotool getactivewindow) ~/Pictures/$(date +%F-%T).png
 
 # start a terminal
-bindsym $mod+Return exec sakura
+bindsym $mod+Return exec $term
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -294,28 +295,29 @@ new_window pixel 0
 for_window [class="^.*"] border pixel 0
 
 # gaps
-gaps inner 3
+gaps inner 2
 gaps outer 0
 smart_gaps on
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3blocks
-
+    i3bar_command i3bar -t
+	status_command i3blocks
+    
     position top
     font pango:Droid Sans Mono Slashed for Powerline 11
 
     colors {
-        background         #000e10
+        background         #001113cF
         statusline         #33AA00
         separator          #33AA00
         
-        focused_workspace  #000e10 #001f33 #33AA00
-        active_workspace   #000e10 #000e10 #33AA00
-        inactive_workspace #000e10 #000e10 #33AA00
-        urgent_workspace   #000e10 #000e10 #33AA00
-        binding_mode       #000e10 #000e10 #33AA00
+        focused_workspace  #00762caF #00FAD01F #33AA00
+        active_workspace   #00762caF #0019141F #33AA00
+        inactive_workspace #001113cF #001113cF #33AA00
+        urgent_workspace   #001113cF #001113cF #33AA00
+        binding_mode       #001113cF #001113cF #33AA00
     }
 }
 
