--- a/home/i3/config
+++ b/home/i3/config
@@ -29,7 +29,7 @@ set $workspace6 "6:Browsers"
 set $workspace7 "7:Discord"
 set $workspace8 "8:OBS"
 set $workspace9 "9:Steam"
-set $workspace10 "10:Music"
+set $workspace10 "10:Misc"
 
 # Window Assignments
 assign [class="Audacious"] $workspace10
@@ -109,7 +109,7 @@ assign [class="Adl"] $workspace1
 # Barony
 assign [class="barony.x86_64"] $workspace1
 # Neverwinter Nights: Enhanced Edition
-assign [class="nwnmain-linux"] $workspace 1
+assign [class="nwnmain-linux"] $workspace1
 
 # Workspace Monitor Assignments
 # Monitor 1
@@ -127,7 +127,7 @@ workspace $workspace10 output $m2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Droid Sans Mono Slashed for Powerline 11
+font pango:D2Coding 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -135,16 +135,16 @@ font pango:Droid Sans Mono Slashed for Powerline 11
 
 set $bg-color 	         #000e10
 set $inactive-bg-color   #000e10
-set $text-color          #33AA00
-set $inactive-text-color #33AA00
+set $text-color          #AA8800
+set $inactive-text-color #AA8800
 set $urgent-bg-color     #000e10
 
 # window colors
 #                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #33AA00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color  #33AA00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color  #33AA00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #33AA00
+client.focused          $bg-color           $bg-color          $text-color          #AA8800
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color  #AA8800
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color  #AA8800
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #AA8800
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -163,7 +163,7 @@ bindsym Shift+$mod+ctrl+q exec ~/scripts/speedrun-tools/timer.sh
 bindsym Shift+$mod+ctrl+e exec pkill -f timer.sh
 
 # screenshot binds
-bindsym Shift+F12 exec maim --hidecursor -s  ~/Pictures/$(date +%F-%T).png
+bindsym Shift+F12 exec maim --hidecursor --nodecorations=2 -sokq  ~/Pictures/$(date +%F-%T).png
 bindsym F12 exec maim -i $(xdotool getactivewindow) ~/Pictures/$(date +%F-%T).png
 
 # start a terminal
@@ -304,20 +304,20 @@ smart_gaps on
 bar {
     i3bar_command i3bar -t
 	status_command i3blocks
-    
+   
     position top
-    font pango:Droid Sans Mono Slashed for Powerline 11
+    font pango:D2Coding 12
 
     colors {
-        background         #001113cF
-        statusline         #33AA00
+        background         #000000cD
+        statusline         #AA8800
         separator          #33AA00
         
-        focused_workspace  #00762caF #00FAD01F #33AA00
-        active_workspace   #00762caF #0019141F #33AA00
-        inactive_workspace #001113cF #001113cF #33AA00
-        urgent_workspace   #001113cF #001113cF #33AA00
-        binding_mode       #001113cF #001113cF #33AA00
+        focused_workspace  #555555aF #0000005F #AA8800
+        active_workspace   #555555aF #0000005F #AA8800
+        inactive_workspace #001113cF #000000cF #AA8800
+        urgent_workspace   #001113cF #000000cF #AA8800
+        binding_mode       #001113cF #000000cF #AA8800
     }
 }
 
