--- a/home/hexchat/hexchat.conf
+++ b/home/hexchat/hexchat.conf
@@ -60,7 +60,7 @@ gui_lang = 15
 gui_mode_buttons = 0
 gui_pane_divider_position = 0
 gui_pane_left_size = 127
-gui_pane_right_size = 259
+gui_pane_right_size = 115
 gui_pane_right_size_min = 80
 gui_quit_dialog = 0
 gui_search_pos = 0
@@ -186,7 +186,7 @@ text_autocopy_stamp = 0
 text_autocopy_text = 1
 text_background = 
 text_color_nicks = 0
-text_font = D2Coding 9
+text_font = Luculent 10
 text_font_main = Monospace 9
 text_font_alternative = Arial Unicode MS,Segoe UI Emoji,Lucida Sans Unicode,Meiryo,Symbola,Unifont
 text_indent = 1
