--- a/home/qutebrowser/qsettings/QtProject.conf
+++ b/home/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/sunderkeenin/Downloads
-lastVisited=file:///home/sunderkeenin/Downloads
+history=file:///home/sunderkeenin/Downloads, file:///home/sunderkeenin
+lastVisited=file:///home/sunderkeenin
 qtVersion=5.10.1
 shortcuts=file:, file:///home/sunderkeenin
 sidebarWidth=90
